--- a/src/app/customer/customer-form/customer-form.component.html
+++ b/src/app/customer/customer-form/customer-form.component.html
@@ -1,11 +1,11 @@
-<div class="container w-50">
+<div class="container width">
     <div class="card m-3">
         <div class="card-body">
             <div class="row">
-                <h5 class="card-title">{{Title}}</h5>
+                <h5 class="card-title text-primary">{{Title}}</h5>
             </div>
         </div>
-
+<hr />
         <div class="col mx-3">
             <form #myForm="ngForm">
                     <div class="col-sm-12">
@@ -20,7 +20,7 @@
                                   </div>
                             </div>
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 mt-2">
                         <div class="form-group">
                             <label for="dateOfBirth">Date of Birth</label>
                             <input type="date" class="form-control" id="dateOfBirth" name="DOB"
