--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -3,13 +3,14 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-sm-8">
-                    <h5 class="card-title">Customer List</h5>
+                    <h5 class="card-title text-primary">Customer List</h5>
                 </div>
                 <div class="col-sm-4">
                     <button class="btn btn-primary float-right w-100" (click)="AddNewCustomer()">
                         Add New Customer +</button>
                 </div>
             </div>
+            <hr />
             <form class="row mt-2">
                 <div class="col-sm-8"></div>
                 <div class="col-sm-4 d-flex">
@@ -27,7 +28,7 @@
         </div>
 
         <div class="col mx-3" *ngIf="CustomerList?.length > 0">
-            <table class="table table-primary table-striped-columns">
+            <table class="table table-primary table-striped-columns responsive">
                 <thead>
                     <tr>
                         <th scope="col">Customer Name</th>
@@ -47,22 +48,28 @@
                     </td>
                     <td><button type="button" class="btn btn-link" (click)="EditCustomer(item.customerId)">Edit</button></td>
                 </tr>
-            </table>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                  <li class="page-item" (click)="PageNo > 0 && SetPaging(PageNo -1)">
-                    <button class="page-link">Previous</button>
-                </li>
-                  <li class="page-item" *ngFor="let i of Pages"  (click)="SetPaging(i)">
-                    <button class="page-link">{{i+1}}</button>
-                </li>
-                  <li class="page-item" (click)="PageNo < Pages.length -1 && SetPaging(PageNo + 1)">
-                    <button class="page-link">Next</button></li>
-                    <p class="mx-3 my-2">Total Record(s): {{CustomerList?.length}}</p>
-                </ul>
-              </nav>
-              
+            </table>  
+            <div class="row">
+                <div class="col-sm-6">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                          <li class="page-item" (click)="PageNo > 0 && SetPaging(PageNo -1)">
+                            <button class="page-link">Previous</button>
+                        </li>
+                          <li class="page-item" *ngFor="let i of Pages"  (click)="SetPaging(i)">
+                            <button class="page-link">{{i+1}}</button>
+                        </li>
+                          <li class="page-item" (click)="PageNo < Pages.length -1 && SetPaging(PageNo + 1)">
+                            <button class="page-link">Next</button></li>
+                        </ul>
+                      </nav>
+                </div>
+                <div class="col-sm-6">
+                    <p class="mx-3 my-2 float-right"> Total Record(s): {{CustomerList?.length}}</p>
+                </div>
+            </div>            
         </div>
+        
         <div class="col mx-3" *ngIf="!(CustomerList?.length > 0)">
             <hr class="w-100" />
             No Record Found!
