--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -13,7 +13,7 @@
             <hr />
             <form class="row mt-2">
                 <div class="col-sm-8">
-                    <div class="form-check form-switch">
+                    <div class="form-check form-switch" *ngIf="CustomerList?.length > 0">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" name ="cardView" [(ngModel)]="GridView">
                         <label class="form-check-label" for="flexSwitchCheckDefault">Grid View</label>
                       </div>
